# contract_analyzer

./: Cargo.toml  benchmark.txt  concurrent_benchmark.txt  linear.r  readme.md  testcontr.txt
contracts/: arraytest.sol  arraytest2.sol  calltest.sol  fixedlengtharray.sol  full_contract1.sol  hashmaptest.sol  struct_test.sol  veciterationTest.sol  vecittest.sol
contracts/bytecodes/: actual_contract2  simple_contract  storage
src/: contract_analyzer.rs  contract_data.rs  contract_logger.rs  contract_utils.rs  cycle_resolution.rs  evm_execution.rs  evm_function.rs  evm_instructions.rs  evm_memory.rs  evm_types.rs  expression_simplifier.rs  expression_simplify_sys.rs  function_analyzer.rs  lib.rs  netbuilder.rs
src/net/: mod.rs  net_executor.rs  netbuilder.rs  runtime_delegation.rs  test_macro.rs  transaction.rs
