[package]
name = "contract-analysis"
version = "0.1.0"
authors = ["Samuele0 <samuele32130@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ethereum-types = "*"
z3 = { version = "0.6.0", features = ["static-link-z3"] }
threadpool="*"
scoped_threadpool ="*"